# VODCutter

./: .gitignore  HOW_IT_WORKS.md  README.md  install_resolve_script.ps1  match_recap_onnx.py  match_recap_semantic.py  matches_to_srt.py  ocr_pass.py  pyproject.toml  requirements.txt  resolve_cut.lua  resolve_markers.py  run_markers.ps1  snap_gameplay.py  snap_visual.py  transcribe.py
cutter/: beatify.py  cli.py  config.py  device.py  jobs.py  match_onnx.py  motion.py  ocr_pass.py  pipeline.py  snap.py  srt.py  transcribe.py
docs/superpowers/plans/: 2026-07-18-recap-cutter-cli.md  2026-07-18-vodcutter-installer.md
docs/superpowers/specs/: 2026-07-18-recap-cutter-cli-design.md  2026-07-18-vodcutter-installer-design.md
installer/: POSTINSTALL.txt  build.ps1  config-default.toml  cutter.cmd  requirements-payload.txt  vodcutter.iss
legacy/: match_recap.py  run_markers.ps1
tests/: test_beatify.py  test_cli.py  test_config.py  test_device.py  test_e2e.py  test_jobs.py  test_match_onnx.py  test_motion.py  test_ocr_pass.py  test_pipeline.py  test_scaffold.py  test_snap.py  test_srt.py  test_transcribe.py
