[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cutter"
version = "0.1.0"
description = "Recap-to-cuts pipeline: VOD + prose recap -> DaVinci Resolve timeline"
requires-python = ">=3.11"

[project.scripts]
cutter = "cutter.cli:main"

[tool.setuptools]
packages = ["cutter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not e2e'"
markers = ["e2e: full-pipeline test; needs models + video encode; run with: pytest -m e2e"]
